# airforce-training-backend

./: .env.example  .gitignore  BACKEND_API_DOCUMENTATION.md  DEPLOYMENT_RENDER.md  README.md  RUN_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  start.ps1  test_login.py
.github/workflows/: backend.yml
alembic/: env.py
app/: config.py  database.py  main.py  openapi_tags.py  redis_client.py  worker.py
app/core/: exceptions.py  health.py  permissions.py  security.py  storage.py
app/middleware/: audit.py  error_handler.py  rate_limit.py
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 211adeedd70f_add_module_context_columns_to_chat_.py  2b5785d05c7d_initial_migration.py  64edd87f8670_add_blocked_to_grounded_state.py  65a9579c60af_create_moderation_tables.py  797781e12aa4_create_content_chunks.py  8ebeeb1ea596_add_embedding_status_to_content_sources.py  9270e8657838_enable_pgvector_extension.py  961df38f299a_add_content_lifecycle_columns.py  a1b2c3d4e5f6_add_system_dependencies_table.py  b2627022ea0d_create_retrieval_logs.py  c3d4e5f6a7b8_quiz_tables.py  e5e83a383a46_create_chat_tables.py  fc70285263f7_add_scenario_actions_table.py
scripts/: create_tables.py  generate_keys.py  rotate_api_keys.py  seed_db.py  seed_full.py  seed_procedures.py  seed_sessions.py  seed_training.py  start.sh
tests/: conftest.py
tests/fixtures/: synthetic_fcom.py
tests/integration/: test_ai_assistant_message.py  test_auth.py  test_content_lifecycle_endpoints.py  test_context_help_endpoint.py  test_explain_endpoint.py  test_moderation_endpoints.py  test_module_awareness.py  (+6 more)
(+109 files in other folders)
